Zend installer has been added to config

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
   "extra": {
     "zf": {
+      "component": "Stagem\\ZfcUser",
       "config-provider": "Popov\\ZfcUser\\ConfigProvider"
     }
   }
